--- a/services/spellchecker_service/Dockerfile.dev
+++ b/services/spellchecker_service/Dockerfile.dev
@@ -1,7 +1,7 @@
 # Development-optimized Dockerfile with improved layer caching
 # Use this for development with volume mounts for hot-reload
 
-FROM python:3.11-slim as base
+FROM python:3.11-slim AS base
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
@@ -53,7 +53,7 @@ RUN if [ -f "pdm.lock.docker" ]; then \
 # ========================================
 # DEVELOPMENT STAGE (for volume mounts)
 # ========================================
-FROM base as development
+FROM base AS development
 
 # Create user and data directory first
 RUN mkdir -p /app/services/spellchecker_service/data/corrected_essays \
@@ -75,7 +75,7 @@ CMD ["pdm", "run", "start"]
 # ========================================
 # PRODUCTION STAGE (for deployment)
 # ========================================
-FROM base as production
+FROM base AS production
 
 # Copy service code for production build
 COPY services/spellchecker_service/ /app/services/spellchecker_service/
