--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,8 @@
 # Development-optimized Docker Compose with volume mounts for hot-reload
 # Usage: docker-compose -f docker-compose.yml -f docker-compose.dev.yml up
+# 
+# This file overrides ALL services to use development Dockerfiles and configurations.
+# It ensures that development containers are started instead of production ones.
 
 services:
   # NLP Service with development optimizations
@@ -18,6 +21,7 @@ services:
       - /app/services/nlp_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
     # Override command for development with auto-reload if service supports it
     # command: ["pdm", "run", "dev"]  # Uncomment if you add a dev script
@@ -36,6 +40,7 @@ services:
       - /app/services/batch_orchestrator_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # Essay Lifecycle Service - Worker Component
@@ -53,6 +58,7 @@ services:
       - /app/services/essay_lifecycle_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # Essay Lifecycle Service - API Component
@@ -70,6 +76,7 @@ services:
       - /app/services/essay_lifecycle_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # Class Management Service
@@ -86,6 +93,7 @@ services:
       - /app/services/class_management_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # Batch Conductor Service
@@ -102,6 +110,7 @@ services:
       - /app/services/batch_conductor_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # LLM Provider Service
@@ -118,6 +127,7 @@ services:
       - /app/services/llm_provider_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # API Gateway Service
@@ -134,6 +144,7 @@ services:
       - /app/services/api_gateway_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # Result Aggregator Service
@@ -150,6 +161,7 @@ services:
       - /app/services/result_aggregator_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # WebSocket Service
@@ -166,6 +178,7 @@ services:
       - /app/services/websocket_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # CJ Assessment Service
@@ -182,6 +195,7 @@ services:
       - /app/services/cj_assessment_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # Spellchecker Service (add missing services that we already optimized)
@@ -198,6 +212,7 @@ services:
       - /app/services/spellchecker_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # File Service
@@ -214,6 +229,7 @@ services:
       - /app/services/file_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
   # Content Service
@@ -230,6 +246,7 @@ services:
       - /app/services/content_service/__pypackages__
     environment:
       - ENV_TYPE=development
+      - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
 # Development-specific volumes for faster file watching
