--- a/services/api_gateway_service/Dockerfile.dev
+++ b/services/api_gateway_service/Dockerfile.dev
@@ -1,7 +1,7 @@
 # Development-optimized Dockerfile with improved layer caching
 # Use this for development with volume mounts for hot-reload
 
-FROM python:3.11-slim as base
+FROM python:3.11-slim AS base
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
@@ -55,7 +55,7 @@ RUN if [ -f "pdm.lock.docker" ]; then \
 # ========================================
 # DEVELOPMENT STAGE (for volume mounts)
 # ========================================
-FROM base as development
+FROM base AS development
 
 # Create user first
 RUN groupadd -r appuser && useradd --no-log-init -r -g appuser appuser
@@ -77,7 +77,7 @@ CMD ["pdm", "run", "start"]
 # ========================================
 # PRODUCTION STAGE (for deployment)
 # ========================================
-FROM base as production
+FROM base AS production
 
 # Copy service code for production build
 COPY services/api_gateway_service/ /app/services/api_gateway_service/
