--- a/docker-compose.infrastructure.yml
+++ b/docker-compose.infrastructure.yml
@@ -235,3 +235,25 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+
+  # PostgreSQL database for Batch Conductor Service
+  batch_conductor_db:
+    image: postgres:15
+    container_name: huleedu_batch_conductor_db
+    restart: unless-stopped
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "5441:5432"
+    environment:
+      - POSTGRES_DB=huleedu_batch_conductor
+      - POSTGRES_USER=${HULEEDU_DB_USER}
+      - POSTGRES_PASSWORD=${HULEEDU_DB_PASSWORD}
+    volumes:
+      - batch_conductor_db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${HULEEDU_DB_USER} -d huleedu_batch_conductor"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
