--- a/services/batch_conductor_service/pyproject.toml
+++ b/services/batch_conductor_service/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "huleedu-common-core",
     "huleedu-service-libs",
     "prometheus-client",
+    "tenacity",
+    "sqlalchemy",
+    "asyncpg",
 ]
 requires-python = ">=3.11"
 
