feat: add resilient Kafka consumer with auto-restart and health monitoring

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -109,7 +109,7 @@ services:
       - /app/services/batch_conductor_service/__pycache__
       - /app/services/batch_conductor_service/__pypackages__
     environment:
-      - ENV_TYPE=development
+      - ENV_TYPE=docker
       - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
