--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,6 +127,7 @@ module = [
     "services.llm_provider_service.*",
     "services.websocket_service.*",
     "services.nlp_service.*",
+    "services.identity_service.*",
 ]
 ignore_missing_imports = false
 disallow_untyped_defs = true
@@ -258,7 +259,8 @@ testpaths = [
     "services/result_aggregator_service/tests",
     "services/llm_provider_service/tests",
     "services/websocket_service/tests",
-    "services/nlp_service/tests"
+    "services/nlp_service/tests",
+    "services/identity_service/tests"
 ]
 pythonpath = [
     "."
@@ -360,6 +362,7 @@ dev = [
     "-e file:///${PROJECT_ROOT}/services/llm_provider_service",
     "-e file:///${PROJECT_ROOT}/services/websocket_service",
     "-e file:///${PROJECT_ROOT}/services/nlp_service",
+    "-e file:///${PROJECT_ROOT}/services/identity_service",
 ]
 [build-system]
 requires = ["pdm-backend"]
