--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ volumes:
   spellchecker_db_data:
   file_service_db_data:
   nlp_db_data:
+  identity_db_data:
 
 # Include the separate infrastructure and application service definitions.
 # Docker Compose will merge these files into a single project configuration.
