--- a/services/identity_service/pyproject.toml
+++ b/services/identity_service/pyproject.toml
@@ -39,8 +39,8 @@ huleedu-common-core = "file:///app/libs/common_core"
 huleedu-service-libs = "file:///app/libs/huleedu_service_libs"
 
 [tool.pdm.scripts]
-start = "hypercorn services/identity_service/app:app"
-dev = "quart --app services/identity_service/app:app --debug run -p 7005"
+start = "hypercorn app:app --bind 0.0.0.0:7005"
+dev = "quart --app app:app --debug run -p 7005"
 
 # Alembic database migration commands (ergonomics; see Rule 085 for actual usage)
 migrate-upgrade = "alembic upgrade head"
