--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -249,6 +249,24 @@ services:
       - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
 
+  # Identity Service with development optimizations
+  identity_service:
+    build:
+      context: .
+      dockerfile: services/identity_service/Dockerfile.dev
+      target: development
+    volumes:
+      - ./services/identity_service:/app/services/identity_service:cached
+      - ./libs/common_core/src:/app/libs/common_core/src:cached
+      - ./libs/huleedu_service_libs/src:/app/libs/huleedu_service_libs/src:cached
+      - /app/services/identity_service/__pycache__
+      - /app/services/identity_service/__pypackages__
+    environment:
+      - ENV_TYPE=development
+      - ENVIRONMENT=development
+      - LOG_LEVEL=DEBUG
+      - IDENTITY_SERVICE_LOG_LEVEL=DEBUG
+
 # Development-specific volumes for faster file watching
 volumes:
   # Use local driver with better performance for development
