--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -710,3 +710,63 @@ services:
       retries: 3
       start_period: 20s
 
+  email_service:
+    build:
+      context: .
+      dockerfile: services/email_service/Dockerfile
+    container_name: huleedu_email_service
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      email_db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "8082:8080"  # HTTP API port (external 8082, internal 8080)
+      - "9098:9098"  # Prometheus metrics port
+    environment:
+      # Core environment
+      - ENV_TYPE=docker
+      - ENVIRONMENT=${ENVIRONMENT:-production}
+      # Database configuration
+      - EMAIL_SERVICE_DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@email_db:5432/huleedu_email
+      - EMAIL_SERVICE_DB_HOST=email_db
+      - EMAIL_SERVICE_DB_PORT=5432
+      - EMAIL_SERVICE_DB_NAME=huleedu_email
+      - EMAIL_SERVICE_DB_USER=${HULEEDU_DB_USER}
+      - EMAIL_SERVICE_DB_PASSWORD=${HULEEDU_DB_PASSWORD}
+      - HULEEDU_DB_USER=${HULEEDU_DB_USER}
+      - HULEEDU_DB_PASSWORD=${HULEEDU_DB_PASSWORD}
+      # Kafka and Redis
+      - EMAIL_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - EMAIL_REDIS_URL=redis://redis:6379
+      # Service configuration
+      - EMAIL_LOG_LEVEL=INFO
+      - EMAIL_SERVICE_HOST=0.0.0.0
+      - EMAIL_SERVICE_HTTP_PORT=8080
+      - EMAIL_SERVICE_PROMETHEUS_PORT=9098
+      # Email-specific configuration
+      - EMAIL_EMAIL_PROVIDER=mock  # Default to mock for safety
+      - EMAIL_DEFAULT_FROM_EMAIL=noreply@huleedu.com
+      - EMAIL_DEFAULT_FROM_NAME=HuleEdu
+      - EMAIL_TEMPLATE_PATH=templates
+      - EMAIL_MAX_RETRY_ATTEMPTS=3
+      - EMAIL_RETRY_DELAY_SECONDS=60
+      # Observability
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
+      - OTEL_SERVICE_NAME=email_service
+      - OTEL_TRACES_EXPORTER=otlp
+      - OTEL_METRICS_EXPORTER=none
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
+
