--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ volumes:
   file_service_db_data:
   nlp_db_data:
   identity_db_data:
+  email_db_data:
 
 # Include the separate infrastructure and application service definitions.
 # Docker Compose will merge these files into a single project configuration.
