feat: implement SMTP email provider and notification orchestrator with Swedish support

--- a/services/email_service/pyproject.toml
+++ b/services/email_service/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     # Email-specific dependencies
     "jinja2",  # Template rendering
     "aiofiles",  # Async file operations for templates
+    "aiosmtplib",  # SMTP client for email delivery
 ]
 
 [build-system]
