--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -751,10 +751,16 @@ services:
       - EMAIL_SERVICE_HOST=0.0.0.0
       - EMAIL_SERVICE_HTTP_PORT=8080
       - EMAIL_SERVICE_PROMETHEUS_PORT=9098
-      # Email-specific configuration
-      - EMAIL_EMAIL_PROVIDER=mock  # Default to mock for safety
-      - EMAIL_DEFAULT_FROM_EMAIL=noreply@huleedu.com
-      - EMAIL_DEFAULT_FROM_NAME=HuleEdu
+      # Email provider configuration (SMTP for production)
+      - EMAIL_EMAIL_PROVIDER=smtp
+      - EMAIL_SMTP_HOST=${EMAIL_SMTP_HOST:-mail.privateemail.com}
+      - EMAIL_SMTP_PORT=${EMAIL_SMTP_PORT:-587}
+      - EMAIL_SMTP_USERNAME=${EMAIL_SMTP_USERNAME}
+      - EMAIL_SMTP_PASSWORD=${EMAIL_SMTP_PASSWORD}
+      - EMAIL_SMTP_USE_TLS=${EMAIL_SMTP_USE_TLS:-true}
+      - EMAIL_SMTP_TIMEOUT=${EMAIL_SMTP_TIMEOUT:-30}
+      - EMAIL_DEFAULT_FROM_EMAIL=${EMAIL_DEFAULT_FROM_EMAIL:-noreply@hule.education}
+      - EMAIL_DEFAULT_FROM_NAME=${EMAIL_DEFAULT_FROM_NAME:-HuleEdu}
       - EMAIL_TEMPLATE_PATH=templates
       - EMAIL_MAX_RETRY_ATTEMPTS=3
       - EMAIL_RETRY_DELAY_SECONDS=60
