feat: migrate class_management_service to shared OutboxManager with automatic migrations

--- a/services/class_management_service/Dockerfile
+++ b/services/class_management_service/Dockerfile
@@ -68,5 +68,5 @@ WORKDIR /app/services/class_management_service
 
 EXPOSE ${CLASS_MANAGEMENT_SERVICE_PORT}
 
-# Command to run the application
-CMD ["pdm", "run", "start"]
+# Command to run the application (environment-aware)
+CMD ["sh", "-c", "if [ \"$HULEEDU_ENVIRONMENT\" = 'production' ]; then pdm run start; else pdm run start-dev; fi"]
