--- a/services/class_management_service/pyproject.toml
+++ b/services/class_management_service/pyproject.toml
@@ -40,9 +40,13 @@ start = "python app.py"
 dev = "quart --app services/class_management_service/app:app --debug run -p 5002"
 
 # Alembic database migration commands
+migrate = "alembic upgrade heads"
 migrate-upgrade = "alembic upgrade head"
 migrate-downgrade = "alembic downgrade -1"
 migrate-history = "alembic history"
 migrate-current = "alembic current"
 migrate-revision = "alembic revision --autogenerate"
 migrate-stamp = "alembic stamp head"
+
+# Development startup with automatic migrations
+start-dev = {composite = ["migrate", "start"]}
