feat: migrate cj_assessment_service to shared OutboxManager implementation

--- a/services/cj_assessment_service/Dockerfile
+++ b/services/cj_assessment_service/Dockerfile
@@ -47,4 +47,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:9090/healthz || exit 1
 
 # Command to run the integrated service (HTTP API + Kafka worker)
-CMD ["pdm", "run", "start"] 
+CMD ["sh", "-c", "if [ \"$HULEEDU_ENVIRONMENT\" = 'production' ]; then pdm run start; else pdm run start-dev; fi"] 
