--- a/services/entitlements_service/Dockerfile
+++ b/services/entitlements_service/Dockerfile
@@ -69,4 +69,4 @@ WORKDIR /app/services/entitlements_service
 EXPOSE ${ENTITLEMENTS_METRICS_PORT}
 
 # Command to run the application
-CMD ["pdm", "run", "start"]
+CMD ["sh", "-c", "if [ \"$HULEEDU_ENVIRONMENT\" = 'production' ]; then pdm run start; else pdm run start-dev; fi"]
