--- a/services/cj_assessment_service/pyproject.toml
+++ b/services/cj_assessment_service/pyproject.toml
@@ -60,12 +60,15 @@ huleedu-service-libs = "file:///app/libs/huleedu_service_libs"
 start = "python app.py"
 
 # Alembic database migration commands
+migrate = "alembic upgrade heads"
 migrate-upgrade = "alembic upgrade head"
 migrate-downgrade = "alembic downgrade -1"
-migrate-revision = "alembic revision --autogenerate"
 migrate-history = "alembic history"
 migrate-current = "alembic current"
 migrate-stamp = "alembic stamp head"
+
+# Development startup with automatic migrations
+start-dev = {composite = ["migrate", "start"]}
 
 [tool.mypy]
 python_version = "3.11"
