--- a/services/email_service/Dockerfile
+++ b/services/email_service/Dockerfile
@@ -71,4 +71,4 @@ EXPOSE ${EMAIL_SERVICE_HTTP_PORT}
 EXPOSE ${EMAIL_SERVICE_PROMETHEUS_PORT}
 
 # Command to run the application
-CMD ["pdm", "run", "start"]
+CMD ["sh", "-c", "if [ \"$HULEEDU_ENVIRONMENT\" = 'production' ]; then pdm run start; else pdm run start-dev; fi"]
