--- a/services/essay_lifecycle_service/pyproject.toml
+++ b/services/essay_lifecycle_service/pyproject.toml
@@ -41,6 +41,17 @@ test = [
     "mypy>=1.10.0",
 ]
 
+[dependency-groups]
+dev = [
+    "ruff>=0.11.11",
+    "mypy>=1.15.0",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
+    "pytest-cov>=6.1.1",
+    "pytest-mock",
+    "faker",
+]
+
 [tool.pdm.resolution.overrides]
 huleedu-common-core = "file:///app/libs/common_core"
 huleedu-service-libs = "file:///app/libs/huleedu_service_libs"
@@ -60,6 +71,8 @@ migrate-history = "alembic history"
 migrate-current = "alembic current"
 migrate-revision = "alembic revision --autogenerate"
 migrate-stamp = "alembic stamp head"
+migrate = "alembic upgrade head"
+start-dev = {composite = ["migrate", "start"]}
 
 [tool.mypy]
 python_version = "3.11"
