refactor: migrate identity service outbox manager to shared library implementation

--- a/services/identity_service/pyproject.toml
+++ b/services/identity_service/pyproject.toml
@@ -27,6 +27,17 @@ dependencies = [
     "cryptography",
 ]
 
+[dependency-groups]
+dev = [
+    "ruff>=0.11.11",
+    "mypy>=1.15.0",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
+    "pytest-cov>=6.1.1",
+    "pytest-mock",
+    "faker",
+]
+
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
@@ -41,6 +52,8 @@ huleedu-service-libs = "file:///app/libs/huleedu_service_libs"
 [tool.pdm.scripts]
 start = "hypercorn app:app --bind 0.0.0.0:7005"
 dev = "quart --app app:app --debug run -p 7005"
+migrate = "alembic upgrade head"
+start-dev = {composite = ["migrate", "start"]}
 
 # Alembic database migration commands (ergonomics; see Rule 085 for actual usage)
 migrate-upgrade = "alembic upgrade head"
