--- a/services/identity_service/Dockerfile
+++ b/services/identity_service/Dockerfile
@@ -70,5 +70,5 @@ WORKDIR /app/services/identity_service
 EXPOSE ${IDENTITY_SERVICE_HTTP_PORT}
 EXPOSE ${IDENTITY_SERVICE_PROMETHEUS_PORT}
 
-# Command to run the application
-CMD ["pdm", "run", "start"]
+# Environment-aware startup command
+CMD ["sh", "-c", "if [ \"$HULEEDU_ENVIRONMENT\" = 'production' ]; then pdm run start; else pdm run start-dev; fi"]
