--- a/services/identity_service/Dockerfile.dev
+++ b/services/identity_service/Dockerfile.dev
@@ -48,11 +48,11 @@ COPY libs/common_core/src/ /app/libs/common_core/src/
 COPY libs/huleedu_service_libs/src/ /app/libs/huleedu_service_libs/src/
 
 # Install dependencies (this layer caches well if pyproject.toml doesn't change)
-# Use lockfile if it exists, otherwise install normally
+# Use lockfile if it exists, otherwise install normally with dev dependencies
 RUN if [ -f "pdm.lock.docker" ]; then \
-        pdm install --prod --lockfile pdm.lock.docker; \
+        pdm install --dev --lockfile pdm.lock.docker; \
     else \
-        pdm install --prod; \
+        pdm install --dev; \
     fi
 
 # ========================================
