feat: implement header-first optimization for idempotency processing

--- a/libs/mypy.ini
+++ b/libs/mypy.ini
@@ -26,3 +26,15 @@ ignore_missing_imports = true
 ignore_missing_imports = true
 [mypy-huleedu_common_core.*]
 ignore_missing_imports = true
+[mypy-common_core.*]
+ignore_missing_imports = true
+[mypy-dishka.*]
+ignore_missing_imports = true
+[mypy-pydantic_settings.*]
+ignore_missing_imports = true
+[mypy-pytest_asyncio.*]
+ignore_missing_imports = true
+[mypy-starlette.*]
+ignore_missing_imports = true
+[mypy-aiohttp.*]
+ignore_missing_imports = true
