--- a/libs/huleedu_service_libs/pyproject.toml
+++ b/libs/huleedu_service_libs/pyproject.toml
@@ -7,17 +7,18 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
+    "aiohttp",
     "aiokafka",
     "pydantic",
     "structlog",
     "huleedu-common-core",
-    "redis[hiredis]>=5.0.0",
+    "redis[hiredis]",
     "opentelemetry-api",
     "opentelemetry-sdk",
     "opentelemetry-exporter-otlp",
     # Dependencies for type-safe HuleEduApp and database modules
-    "sqlalchemy[asyncio]>=2.0.0",
-    "quart>=0.19.0",
+    "sqlalchemy[asyncio]",
+    "quart",
     "prometheus-client",
 ]
 
