--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -459,6 +459,8 @@ services:
       - API_GATEWAY_SERVICE_PORT=8080
       - API_GATEWAY_SERVICE_HOST=0.0.0.0
       - API_GATEWAY_SERVICE_REDIS_URL=redis://redis:6379
+      # JWT Configuration
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-secret-key-here}
       # Backend service URLs
       - BATCH_ORCHESTRATOR_SERVICE_URL=http://batch_orchestrator_service:5000
       - CLASS_MANAGEMENT_SERVICE_URL=http://class_management_service:5002
