refactor: centralize JWT validation and add user-based rate limiting in API gateway

--- a/env.example
+++ b/env.example
@@ -5,17 +5,8 @@
 # =============================================================================
 # Database Configuration (Required)
 # =============================================================================
-***REMOVED***
+HULEEDU_DB_USER=huleedu_user
 HULEEDU_DB_PASSWORD=your-secure-database-password-here
-
-# =============================================================================
-# LLM Provider API Keys (Required for CJ Assessment Service)
-# =============================================================================
-OPENAI_API_KEY=your-openai-api-key-here
-ANTHROPIC_API_KEY=your-anthropic-api-key-here
-GOOGLE_API_KEY=your-google-api-key-here
-GOOGLE_PROJECT_ID=your-google-cloud-project-id-here
-OPENROUTER_API_KEY=your-openrouter-api-key-here
 
 # =============================================================================
 # Database Environment Toggle
@@ -28,9 +19,74 @@ HULEEDU_PROD_DB_PORT=5432
 HULEEDU_PROD_DB_PASSWORD=your-secure-production-password
 
 # =============================================================================
+# LLM Provider API Keys (Required for CJ Assessment Service)
+# =============================================================================
+OPENAI_API_KEY=your-openai-api-key-here
+ANTHROPIC_API_KEY=your-anthropic-api-key-here
+GOOGLE_PROJECT_ID=your-google-cloud-project-id-here
+GOOGLE_API_KEY=your-google-api-key-here
+OPENROUTER_API_KEY=your-openrouter-api-key-here
+
+# =============================================================================
+# Grafana Configuration
+# =============================================================================
+GRAFANA_ADMIN_PASSWORD=your-grafana-admin-password
+
+# =============================================================================
 # LLM Provider Service Configuration
 # =============================================================================
 LLM_ADMIN_API_KEY=your-llm-admin-api-key-here
 DEFAULT_LLM_PROVIDER=anthropic
 PROVIDER_SELECTION_STRATEGY=priority
-LLM_COST_ALERT_THRESHOLD=100.0 
+LLM_COST_ALERT_THRESHOLD=100.0
+
+# =============================================================================
+# Internal Service Authentication
+# =============================================================================
+HULEEDU_INTERNAL_API_KEY=your-internal-api-key
+
+# =============================================================================
+# API Gateway JWT Configuration
+# =============================================================================
+# Development JWT secret (aligns with AGW service tests)
+JWT_SECRET_KEY=change-me-dev-secret
+
+API_GATEWAY_JWT_SECRET_KEY=change-me-dev-secret
+API_GATEWAY_JWT_AUDIENCE=huleedu-platform
+API_GATEWAY_JWT_ISSUER=huleedu-identity-service
+
+# =============================================================================
+# Identity Service JWT Configuration
+# =============================================================================
+# Development JWT secret (HS256 for local development)
+IDENTITY_JWT_DEV_SECRET=your-dev-secret-base64
+
+IDENTITY_JWT_AUDIENCE=huleedu-platform
+IDENTITY_JWT_ISSUER=huleedu-identity-service
+
+# Production RS256 configuration (used when HULEEDU_ENVIRONMENT=production)
+IDENTITY_JWT_RS256_PRIVATE_KEY_PATH=./secrets/jwt-private-key.pem
+IDENTITY_JWT_RS256_PUBLIC_JWKS_KID=huleedu-identity-prod-key-2025-01
+
+USE_MOCK_LLM=true
+ENVIRONMENT=development
+
+# =============================================================================
+# Email Service SMTP Configuration (Namecheap Private Email)
+# =============================================================================
+EMAIL_PROVIDER=mock
+EMAIL_SMTP_HOST=mail.privateemail.com
+EMAIL_SMTP_PORT=587
+EMAIL_SMTP_USERNAME=noreply@hule.education
+EMAIL_SMTP_PASSWORD=your-smtp-password
+EMAIL_SMTP_USE_TLS=true
+EMAIL_SMTP_TIMEOUT=30
+EMAIL_DEFAULT_FROM_EMAIL=noreply@hule.education
+EMAIL_DEFAULT_FROM_NAME=HuleEdu
+
+# =============================================================================
+# Docker Compose Configuration (Development Mode)
+# =============================================================================
+# This ensures development containers are used by default
+COMPOSE_FILE=docker-compose.yml:docker-compose.dev.yml
+
